plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.fimsolution.group.app'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
//    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.3.4'
//
//    implementation 'org.springframework.session:spring-session-data-redis:3.3.2'


    implementation 'com.googlecode.libphonenumber:libphonenumber:8.13.47'


    implementation 'org.flywaydb:flyway-core:10.19.0'



    runtimeOnly 'com.h2database:h2:2.2.224'
    testImplementation 'com.h2database:h2:2.2.224'





    testImplementation 'org.testng:testng:7.10.2'




    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.3'



    implementation 'com.mailjet:mailjet-client:5.2.5'



    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'


    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.0.2'



    implementation 'org.springframework.boot:spring-boot-starter-actuator'



    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useTestNG()
}

